test_scores/negative_dimers/features/Q709F0.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q709F0.pkl.xz